src/objects/MUSW__BlueBleam_Project_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>MUSW__BlueBeam_Project_Id_API_Name__c</fullName>
        <description>Field API Name where the BB Project Id value is to be stored in</description>
        <inlineHelpText>Field API Name where the BB Project Id value is to be stored in</inlineHelpText>
        <label>Project Id Field  API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Project_Name_Definition__c</fullName>
        <description>Format to use for BB Project Name eg. {!MUSW__Permit2__c.Name}</description>
        <inlineHelpText>Format to use for BB Project Name eg. {!MUSW__Permit2__c.Name}</inlineHelpText>
        <label>Project Name Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bluebeam Project Setting</label>
    <pluralLabel>Bluebeam Projects Settings</pluralLabel>
</CustomObject>